--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -80,6 +80,11 @@
           	<div class="notice"><%= notice %></div>
             <p class="alert"><%= alert %></p>
             <%= yield %>
+            <div class="container">
+	
+            © 2022 حسوب I/O. مساهمات المستخدمين مرخّصة تحت <a href="http://creativecommons.org/licenses/by-sa/4.0/" target="_blank" rel="license noopener noreferrer nofollow">رخصة المشاع الإبداعي BY-SA</a>.
+
+            </div>
           </div>
         </div>
       </div>
