--- a/app/views/communities/index.html.erb
+++ b/app/views/communities/index.html.erb
@@ -1,4 +1,5 @@
 <h1><%= t '.title' %></h1>
+	<p>عذرا على التصميم بالكاد أستطيع تحريك أحد هته المربعات</p>
   	<div class="content container">
   		<div class="itemsList">
   			<% if @communities.empty? %>
